Closed
Bug 479114
Opened 16 years ago
Closed 16 years ago
[FIX]Handle page-break frames after we've sorted out our correct parent
Categories
(Core :: Layout, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: bzbarsky, Assigned: bzbarsky)
Details
Attachments
(1 file, 1 obsolete file)
Right now mixing page-break with table pseudos leads us to stick page-break frames all sorts of places where we don't expect them. Patch coming up fixes the issue.
| Assignee | ||
Comment 1•16 years ago
|
||
Without this patch, the crashtest triggers:
###!!! ASSERTION: Table row has a non-cell child.: 'Not Reached', file /Users/bzbarsky/mozilla/css-frameconst/mozilla/layout/tables/nsTableRowFrame.cpp, line 1420
###!!! ASSERTION: yikes, a non-row child: 'Not Reached', file /Users/bzbarsky/mozilla/css-frameconst/mozilla/layout/tables/nsTableRowFrame.cpp, line 814
###!!! ASSERTION: yikes, a non-row child: 'Not Reached', file /Users/bzbarsky/mozilla/css-frameconst/mozilla/layout/tables/nsTableRowGroupFrame.cpp, line 383
###!!! ASSERTION: Non-row-group primary frame list child of an nsTableFrame? How come?: 'Not Reached', file /Users/bzbarsky/mozilla/css-frameconst/mozilla/layout/tables/nsTableFrame.cpp, line 2780
###!!! ASSERTION: Non-row-group primary frame list child of an nsTableFrame? How come?: 'Not Reached', file /Users/bzbarsky/mozilla/css-frameconst/mozilla/layout/tables/nsTableFrame.cpp, line 2780
Attachment #362967 -
Flags: superreview?(roc)
Attachment #362967 -
Flags: review?(roc)
Comment on attachment 362967 [details] [diff] [review]
Proposed fix
+ // XXXbz should we actually allow page-break frames here?
We probably should, but I won't push the point since page-break shouldn't be implemented by generating frames at all.
Attachment #362967 -
Flags: superreview?(roc)
Attachment #362967 -
Flags: superreview+
Attachment #362967 -
Flags: review?(roc)
Attachment #362967 -
Flags: review+
| Assignee | ||
Comment 3•16 years ago
|
||
Yeah; I was worried in particular about pointing them to native anon content...
I can file a followup bug on that.
| Assignee | ||
Comment 4•16 years ago
|
||
Attachment #362967 -
Attachment is obsolete: true
| Assignee | ||
Comment 5•16 years ago
|
||
Status: NEW → RESOLVED
Closed: 16 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Updated•7 years ago
|
Product: Core → Core Graveyard
Updated•7 years ago
|
Component: Layout: Misc Code → Layout
Product: Core Graveyard → Core
You need to log in
before you can comment on or make changes to this bug.
Description
•