Bug 479114.  Create page-break frames only after we know our final parent.